[FIX] 바뀐 record에 맞게 Lua스크립트 삭제, 해시 필드값 증감은 HINCRBY함수를 사용하도록 수정